--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,10 +12,10 @@ click-completion==0.5.2; python_version >= "3.6" and python_version <= "3.9"
 click-didyoumean==0.0.3; python_version >= "3.6" and python_version <= "3.9"
 click-help-colors==0.9.1; python_version >= "3.6" and python_version <= "3.9"
 click-option-group==0.5.3; python_version >= "3.6" and python_version <= "3.9"
-click-skeleton==0.15; python_version >= "3.6" and python_version <= "3.9"
+click-skeleton==0.16; python_version >= "3.6" and python_version <= "3.9"
 click==8.0.1; python_version >= "3.6" and python_version <= "3.9"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version <= "3.9" and platform_system == "Windows" or python_full_version >= "3.5.0" and sys_platform == "win32" and python_version >= "3.6" and python_version <= "3.9" and platform_system == "Windows"
-colorlog==5.0.1
+colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version <= "3.9" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0" and python_version <= "3.9" and platform_system == "Windows"
+colorlog==6.4.1; python_version >= "3.6"
 coverage-badge==1.0.1
 coverage==5.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
 cryptography==3.4.7; python_version >= "3.6"
@@ -88,7 +88,7 @@ types-python-slugify==0.1.2
 types-requests==2.25.6
 typing-extensions==3.10.0.0; python_version >= "3.5"
 urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
-watchdog==2.1.4; python_version >= "3.6"
+watchdog==2.1.5; python_version >= "3.6"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
 websocket-client==0.59.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 wrapt==1.12.1; python_version >= "3.6" and python_version < "4.0"
