--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ click-completion==0.5.2; python_version >= "3.6" and python_version <= "3.9"
 click-didyoumean==0.0.3; python_version >= "3.6" and python_version <= "3.9"
 click-help-colors==0.9.1; python_version >= "3.6" and python_version <= "3.9"
 click-option-group==0.5.3; python_version >= "3.6" and python_version <= "3.9"
-click-skeleton==0.15; python_version >= "3.6" and python_version <= "3.9"
+click-skeleton==0.16; python_version >= "3.6" and python_version <= "3.9"
 click==8.0.1; python_version >= "3.6" and python_version <= "3.9"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version <= "3.9" and platform_system == "Windows" or python_full_version >= "3.5.0" and sys_platform == "win32" and python_version >= "3.6" and python_version <= "3.9" and platform_system == "Windows"
-colorlog==5.0.1
+colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version <= "3.9" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0" and python_version <= "3.9" and platform_system == "Windows"
+colorlog==6.4.1; python_version >= "3.6"
 fuzzywuzzy==0.18.0
 graphql-py==0.8.1
 humanize==3.11.0; python_version >= "3.6"
@@ -48,6 +48,6 @@ toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and pyth
 types-python-slugify==0.1.2
 types-requests==2.25.6
 urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
-watchdog==2.1.4; python_version >= "3.6"
+watchdog==2.1.5; python_version >= "3.6"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
 youtube-dl==2021.6.6
