--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-astroid==2.8.4; python_version >= "3.6" and python_version < "4.0"
+astroid==2.8.6; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6" and sys_platform == "win32"
 attrs==21.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
@@ -6,7 +6,7 @@ bcrypt==3.2.0; python_version >= "3.6" and sys_platform != "win32"
 bump2version==1.0.1; python_version >= "3.5"
 certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 cffi==1.15.0; python_version >= "3.6" and sys_platform != "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_version >= "3.6" and sys_platform != "win32" and python_full_version >= "3.4.0")
-charset-normalizer==2.0.7; python_full_version >= "3.6.0" and python_version >= "3"
+charset-normalizer==2.0.8; python_full_version >= "3.6.0" and python_version >= "3"
 cli-helpers==2.2.0; python_version >= "3.6"
 click-aliases==1.0.1; python_full_version >= "3.6.2" and python_version < "3.10"
 click-completion==0.5.2; python_full_version >= "3.6.2" and python_version < "3.10"
@@ -18,15 +18,15 @@ click==8.0.3; python_full_version >= "3.6.2" and python_version < "3.10" and pyt
 colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "3.10" and platform_system == "Windows" and (python_version >= "3.4" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.4" and python_full_version >= "3.5.0")
 colorlog==6.6.0; python_version >= "3.6"
 configobj==5.0.6; python_version >= "3.6"
-coverage-badge==1.0.2
-coverage==5.5; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.6"
-cryptography==35.0.0; python_version >= "3.6" and sys_platform != "win32"
+coverage-badge==1.1.0
+coverage==6.1.2; python_version >= "3.6"
+cryptography==36.0.0; python_version >= "3.6" and sys_platform != "win32"
 distro==1.6.0; python_version >= "3.4"
 docker-compose==1.29.2; python_version >= "3.4"
 docker==5.0.3; python_version >= "3.6" or sys_platform != "win32"
 dockerpty==0.4.1; python_version >= "3.4"
 docopt==0.6.2; python_version >= "3.4"
-docutils==0.18; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+docutils==0.18.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 flake8==4.0.1; python_version >= "3.6"
 fuzzywuzzy==0.18.0
 gql==2.0.0
@@ -35,7 +35,7 @@ humanize==3.12.0; python_version >= "3.6"
 idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
 iniconfig==1.1.1; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0" and python_version >= "3.6"
-jinja2==3.0.2; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+jinja2==3.0.3; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 jsonschema==3.2.0; python_version >= "3.4"
 lazy-object-proxy==1.6.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
 logging-tree==1.9
@@ -45,7 +45,7 @@ munch==2.5.0; python_full_version >= "3.6.2" and python_version < "3.10"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
 mypy-extensions==0.4.3; python_version >= "3.5"
 mypy==0.910; python_version >= "3.5"
-packaging==21.2; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+packaging==21.3; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 paramiko==2.8.0; python_version >= "3.6" and sys_platform != "win32"
 pendulum==2.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pgcli==3.2.0; python_version >= "3.6"
@@ -58,7 +58,7 @@ prettytable==2.4.0; python_version >= "3.6"
 progressbar2==3.55.0
 promise==2.3
 prompt-toolkit==3.0.22; python_full_version >= "3.6.2"
-psycopg2==2.9.1; python_version >= "3.6"
+psycopg2==2.9.2; python_version >= "3.6"
 py==1.11.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 pyacoustid==1.2.2
 pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -68,7 +68,7 @@ pyflakes==2.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or py
 pygments==2.10.0; python_version >= "3.5"
 pylint==2.11.1; python_version >= "3.6" and python_version < "4.0"
 pynacl==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_version >= "3.6" and sys_platform != "win32" and python_full_version >= "3.4.0"
-pyparsing==2.4.7; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+pyparsing==3.0.6; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 pyrsistent==0.18.0; python_version >= "3.6"
 pytest-click==1.0.2; python_full_version >= "3.6.2" and python_version < "3.10"
 pytest-cov==3.0.0; python_version >= "3.6"
@@ -76,7 +76,7 @@ pytest-docker-compose==3.2.1
 pytest-timeout==2.0.1; python_version >= "3.6"
 pytest==6.2.5; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-python-dotenv==0.19.1; python_version >= "3.5"
+python-dotenv==0.19.2; python_version >= "3.5"
 python-levenshtein==0.12.2
 python-slugify==5.0.2; python_version >= "3.6"
 python-utils==2.5.6
@@ -96,10 +96,11 @@ sqlparse==0.4.2; python_version >= "3.6"
 tabulate==0.8.9; python_version >= "3.6"
 text-unidecode==1.3; python_version >= "3.6"
 texttable==1.6.4; python_version >= "3.4"
-toml==0.10.2; python_version >= "3.6" and python_version < "3.10" and python_full_version >= "3.6.2" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4")
+toml==0.10.2; python_version >= "3.6" and python_version < "3.10" and python_full_version >= "3.6.2"
+tomli==1.2.2; python_version >= "3.6"
 types-python-slugify==5.0.2
-types-requests==2.25.12
-typing-extensions==3.10.0.2; python_version >= "3.6" and python_version < "3.10"
+types-requests==2.26.0
+typing-extensions==4.0.0; python_version >= "3.6" and python_version < "3.10"
 urllib3==1.26.7; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
 watchdog==2.1.6; python_version >= "3.6"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
