--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 attrs==21.4.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
-beartype==0.10.2; python_full_version >= "3.6.0"
+beartype==0.10.3; python_full_version >= "3.6.0"
 certifi==2021.10.8; python_version >= "3.8" and python_full_version < "3.0.0" and platform_system == "Windows" and python_version < "4.0" or python_full_version >= "3.6.0" and platform_system == "Windows" and python_version >= "3.8" and python_version < "4.0"
 charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.8" and python_version < "4.0"
 click-aliases==1.0.1; python_version >= "3.8" and python_version < "4.0"
@@ -10,7 +10,7 @@ click-help-colors==0.9.1; python_version >= "3.8" and python_version < "4.0"
 click-option-group==0.5.3; python_version >= "3.8" and python_version < "4"
 click-skeleton==0.21; python_version >= "3.8" and python_version < "4.0"
 click==8.0.4; python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.6.2" and python_full_version < "4.0.0" and (python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" and platform_system == "Windows" or python_version >= "3.8" and python_version < "4.0" and platform_system == "Windows" and python_full_version >= "3.5.0")
+colorama==0.4.4; python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version < "4.0" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.5.0" and python_version < "4.0" and platform_system == "Windows"
 colorlog==6.6.0; python_version >= "3.6"
 commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
 edgedb==0.22.0
@@ -32,15 +32,15 @@ python-slugify==6.1.1; (python_version >= "2.7" and python_full_version < "3.0.0
 python-utils==3.1.0; python_full_version >= "3.7.0"
 python-vlc==3.0.16120
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-rich==11.2.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
+rich==12.0.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
 semver==2.13.0; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.4.0"
 shellingham==1.4.0; python_version >= "3.8" and python_version < "4.0"
 six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.3.0"
 spotipy==2.19.0
 text-unidecode==1.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 types-python-slugify==5.0.3
-types-requests==2.27.11
-types-urllib3==1.26.10; python_version >= "3.8" and python_version < "4.0"
+types-requests==2.27.12
+types-urllib3==1.26.11; python_version >= "3.8" and python_version < "4.0"
 typing-extensions==4.1.1; python_version >= "3.6"
 urllib3==1.26.8; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.8"
 watchdog==2.1.6; python_version >= "3.6"
