--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ python-slugify = "^6.0.1"
 deepdiff = "^5.7.0"
 edgedb = "^0.23.0"
 pyright = "^1.1.248"
+Pygments = "^2.11.2"
+types-PyYAML = "^6.0.8"
 
 [tool.isort]
 multi_line_output = 3
