--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,13 +51,13 @@ multi_line_output = 3
 coverage-badge = "^1.0"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
-pylint = "2.13.9"
+pylint = "^2.14.1"
 pytest-docker-compose = "^3.1.2"
 docker = { version = "^5.0", markers = "sys_platform != 'win32'" }
 pytest-cov = "^3.0.0"
 pytest-timeout = "^2.0.1"
 flake8 = "^4.0.1"
-mypy = "^0.960"
+mypy = "^0.961"
 pytest-click = "^1.0.2"
 isort = "^5.10.1"
 bandit = "^1.7.2"
@@ -79,5 +79,5 @@ addopts = "--timeout 600 --cov-report term-missing --durations=0 --cov musicbot 
 jobs = 4
 [tool.pylint.messages_control]
 disable = """
-too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation,too-many-boolean-expressions
+method-cache-max-size-none,too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation,too-many-boolean-expressions
 """
